--- a/Aula21-05/NavBars/Nav04/src/assets/style/style.css
+++ b/Aula21-05/NavBars/Nav04/src/assets/style/style.css
@@ -7,15 +7,18 @@
     box-sizing: var(--box-sizing);
     background: var(--background);
     text-decoration: var(--text-decoration);
+    color: black;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
 }
 header{
     display: flex;
     justify-content: space-between;
     align-items: center;
     
-    width: 100%;
     height: 72px;
     margin: 12px 64px;
+
 }
 header >img{
     width: 63px;
@@ -23,9 +26,8 @@ header >img{
 }
 .buttons{
     display: flex;
-    padding: 4px 72px 4px 0;
     gap: 24px;
-    margin-right: 64px;
+    padding: 12px;
 }
 #button{
     padding: 8px 20px;
@@ -44,6 +46,7 @@ main> nav{
     justify-content: center;
     margin: 219px 63px 0 64px;
     /* padding: 12px 0; */
+    gap: 12px;
 }
 /* main > nav > a{
 
