--- a/Aula21-05/NavBars/Nav03/src/assets/style/style.css
+++ b/Aula21-05/NavBars/Nav03/src/assets/style/style.css
@@ -28,11 +28,6 @@ header > nav{
     gap: 32px;
 
 }
-header > img{
-    position: absolute;
-    left: 49%;
-    transform: translateX(-50%);
-}
 header > nav > a, p{
     color: black;
     font-size: 16px;
@@ -47,6 +42,9 @@ nav > button{
 nav > button > img{
     width: 24px;
     height: 24px;
+}
+.button{
+    width: 206px;
 }
 #button{
     background-color: black;
