--- a/Aula26-05/Projetos/Furniro/src/assets/styles/global.css
+++ b/Aula26-05/Projetos/Furniro/src/assets/styles/global.css
@@ -11,7 +11,17 @@
 :root {
     --color-primary:#B88E2F;
     --color-white: #FFFFFF;
+    --color-lightBG: #F4F5F7;
+    --color-neutralBege: #FFF3E3;
+
     --color-black: #000000;
     --color-neutralBlack: #333333;
-    --color-neutralBege: #FFF3E3;
+    --color-gray1: #3A3A3A;
+    --color-gray2: #616161;
+    --color-gray3: #898989;
+    --color-gray4: #B0B0B0;
+    --color-gray5: #D8D8D8;
+
+    --color-greenAccents:#2EC1AC;
+    --color-redAccents:#E97171;
 }
